examples/test/testpolicy2931.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2931
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key1: value8
      key8: value14
      key48: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value15
      podSelector:
        matchLabels:
          key47: value18
